# sciava

./: README.md  setup.cfg
src/sciava/: __init__.py  algor.py  basis.py  data.py  kernels.py  model.py  parameters.py  qm.py  scf.py  solvers.py  system.py
tests/: run.sh  test.py
