[metadata]
name = sciava-adean7
version = 0.0.1
author = Ava Dean
author_email = ava.dean@chem.ox.ac.uk
description = Physical and chemical properties calculation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adean7/sciava.git
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
